--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -6,3 +6,6 @@ export WSL=true
 export WSL=false
 {{   end }}
 {{ end }}
+
+export ZSH=/home/skogix/.config/zsh/oh-my-zsh
+export ZSH_CUSTOM=/home/skogix/.config/zsh/oh-my-zsh/custom
