--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -9,3 +9,7 @@ export WSL=false
 
 export ZSH=/home/skogix/.config/zsh/oh-my-zsh
 export ZSH_CUSTOM=/home/skogix/.config/zsh/oh-my-zsh/custom
+export DOCKER_CONFIG=/home/skogix/srv/compose
+export DOCKER_VOLUMES=/home/skogix/srv/volumes
+export DOCKER_SECRETS=/home/skogix/srv/.secret
+
